# featureforge

./: AGENTS.md  Cargo.toml  README.md  RELEASE-NOTES.md  TODOS.md  clippy.toml
.cargo/: config.toml
.codex/: INSTALL.md
.copilot/: INSTALL.md
agents/: code-reviewer.instructions.md  code-reviewer.md
benches/: common.rs  execution_status.rs  plan_contract.rs  workflow_status.rs
commands/: execute-plan.md
docs/: README.codex.md  README.copilot.md  runtime-architecture.md  test-suite-enhancement-plan.md  testing.md
featureforge-upgrade/: SKILL.md
references/: agent-grounding.md  contributor-mode.md  debugging-tdd-examples.md  execution-review-qa-examples.md  plan-ceo-review-rubric.md  plan-eng-review-rubric.md  writing-plans-examples.md
review/: checklist.md  late-stage-precedence-reference.md  plan-task-contract.md  review-accelerator-packet-contract.md
schemas/: plan-contract-analyze.schema.json  plan-contract-packet.schema.json  plan-execution-status.schema.json  repo-runtime-root.schema.json  repo-safety-check.schema.json  update-check.schema.json  workflow-handoff.schema.json  workflow-operator.schema.json  workflow-resolve.schema.json  workflow-status.schema.json
scripts/: audit-rust-skills.sh  check-featureforge-cutover.sh  gen-agent-docs.mjs  gen-skill-docs.mjs  lint-workspace-runtime-evidence.mjs  prebuilt-runtime-provenance.mjs  refresh-prebuilt-runtime.ps1  refresh-prebuilt-runtime.sh  run-codex-runtime-tests.mjs  run-internal-runtime-compatibility-tests.sh  run-public-runtime-flow-tests.sh  run-rust-tests-sharded.sh  verify-installed-control-plane-isolation.sh  verify-source-archive.mjs
skills/: skill-doc-budgets.json
src/: benchmarking.rs  bool_flag.rs  expect_ext.rs  lib.rs  main.rs  self_hosting.rs  test_support.rs
superpowers-upgrade/: SKILL.md
tests/: bootstrap_smoke.rs  cli_parse_boundary.rs  contracts_execution_harness.rs  contracts_execution_leases.rs  contracts_execution_runtime_boundaries.rs  contracts_spec_plan.rs  execution_harness_state.rs  execution_query.rs  instructions_and_git.rs  internal_bootstrap_smoke.rs  internal_cli_parse_boundary.rs  internal_contracts_execution_leases.rs  internal_contracts_execution_runtime_boundaries.rs  internal_execution_harness_state.rs  internal_execution_query.rs  internal_plan_execution.rs  internal_plan_execution_final_review.rs  internal_plan_execution_topology.rs  internal_workflow_runtime.rs  internal_workflow_shell_smoke.rs  (+31 more)
(+424 files in other folders)
