[package]
name = "featureforge"
version = "1.9.2"
edition = "2024"
rust-version = "1.94"
publish = false
description = "Rust runtime for the FeatureForge workflow toolkit"
license = "MIT"

[lib]
name = "featureforge"

[workspace]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_qualifications = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -2 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
redundant_clone = "deny"
implicit_clone = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.dependencies]
assert_cmd = "2.2.0"
camino = "1.2.2"
clap = { version = "4.6.0", features = ["derive"] }
criterion = "0.8.2"
fs-err = "3.3.0"
gix = { version = "0.81.0", default-features = false, features = ["status", "revision", "sha1"] }
insta = "1"
jiff = "0.2.23"
proptest = "1.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "native-tls"] }
schemars = "1.2.1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3.0"
sha2 = "0.10"
tempfile = "=3.26.0"
thiserror = "2.0.18"

[dependencies]
clap = { workspace = true }
gix = { workspace = true }
jiff = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
shlex = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
gix-diff = { path = "vendor/gix-diff" }
gix-hashtable = { path = "vendor/gix-hashtable" }
gix-index = { path = "vendor/gix-index" }
gix-tempfile = { path = "vendor/gix-tempfile" }
libredox = { path = "vendor/libredox" }
clru = { path = "vendor/clru" }

[[bench]]
name = "workflow_status"
harness = false

[[bench]]
name = "plan_contract"
harness = false

[[bench]]
name = "execution_status"
harness = false
